@@ -9,6 +9,7 @@ import lib.terraform_dir
 # constants
 # =============================================================================
 
+INIT = 'init'
 PLAN = 'plan'
 APPLY = 'apply'
 CREATE_PLAN = 'create-plan'
@@ -16,6 +17,7 @@ SHOW_PLAN = 'show-plan'
 APPLY_PLAN = 'apply-plan'
 OUTPUT = 'output'
 COMMANDS = [
+    INIT,
     PLAN,
     APPLY,
     CREATE_PLAN,
@@ -23,6 +25,19 @@ COMMANDS = [
     APPLY_PLAN,
     OUTPUT
 ]
+
+
+# =============================================================================
+# init
+# =============================================================================
+def init(
+        terraform_source_dir: str,
+        terraform_dir_path: Optional[str] = None,
+        debug: bool = False) -> None:
+    lib.terraform_dir.init_terraform_dir(
+        terraform_source_dir,
+        terraform_dir_path=terraform_dir_path,
+        debug=debug)
 
 
 # =============================================================================
