@@ -1,3 +1,7 @@
+2019-04-27
+
+- [enhancement] added init task for an improved workstation mode environment
+
 2019-04-24
 
 - consul image version to 1.4.4
